--- a/.github/actions/install-qemu/action.yml
+++ b/.github/actions/install-qemu/action.yml
@@ -16,7 +16,7 @@ runs:
         qemu_timestamp=$HOME/.qemu/${{ inputs.version }}
 
         # Add the prefix to path
-        echo '::add-path::'$qemu_prefix/bin
+        echo "$qemu_prefix/bin" >> $GITHUB_PATH
 
         # Skip the remaining steps if QEMU has already been built
         if [ -f "$qemu_timestamp" ]; then
